Fix: fixing horizontal scroll :3

--- a/assets/main.css
+++ b/assets/main.css
@@ -246,7 +246,7 @@ strong {
 }
 
 footer {
-    width: 100vw;
+    width: 100%;
     height: 6vh;
     font-family: josefin-sans, sans-serif;
     font-weight: 400;
@@ -376,7 +376,7 @@ to {
 
 @media (max-width: 480px) {
     header {
-        width: 100vw;
+        width: 100%;
         height: 7vh;
     }
     nav {
